--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/cpp_redis"]
 	path = lib/cpp_redis
-	url = git@github.com:Cylix/cpp_redis.git
+	url = https://github.com/cpp-redis/cpp_redis.git
